# goodreads-graphql

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: nightly_tests.yml
schema/: schema.graphql  schema.json
src/: client.rs  client_2.rs  credentials.rs  graphql.rs  identity.rs  identity_cache.rs  lib.rs  main.rs  middleware.rs  response_parser.rs
tests/api_tests/: main.rs  test_client.rs
