[package]
name = "goodreads-graphql"
version = "0.2.0"
edition = "2021"

[lib]
doctest = true

[dependencies]
tracing = "0.1.37"
thiserror = "1.0.38"

aws-config = "0.56"
aws-types = "0.56"
aws-credential-types = "0.56"

aws-sdk-cognitoidentity = "0.29.0"
aws-sig-auth = "0.56"

aws-smithy-async = { version = "0.56", features = ["rt-tokio"] }
aws-smithy-client = { version = "0.56", features = ["rustls", "client-hyper"] }

aws-http = "0.56"
aws-smithy-http = "0.56"
aws-smithy-http-tower = "0.56"

http = "1.1.0"
hyper = "0.14.24"

bytes = { version = "1.4.0", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_with = "3.8.1"

tokio = "1"
futures = "0.3"
tower = "0.4"

aws-sign-v4 = "0.3.0"
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls", "gzip", "stream"], default-features = false }
chrono = "0.4.38"
url = "2.5.0"

[dev-dependencies]
once_cell = "1.17.1"
tokio = { version = "1.25.0", features = ["test-util", "macros", "rt-multi-thread"] }
tokio-test = "0.4.2"

