[package]
name = "goodreads-graphql"
version = "0.2.0"
edition = "2021"

[lib]
doctest = true

[dependencies]
tracing = "0.1.37"
thiserror = "1"
chrono = "0.4.38"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

tokio = { version = "1", default-features = false, features = ["sync"] }
futures = "0.3"

reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls", "gzip", "stream"], default-features = false }
http = "1.1.0"
url = "2.5.0"
aws-sign-v4 = "0.3.0"

[dev-dependencies]
once_cell = "1.17.1"
tokio = { version = "1.25.0", features = ["test-util", "macros", "rt-multi-thread"] }
tokio-test = "0.4.2"

