[package]
name = "goodreads-graphql"
version = "0.2.0"
edition = "2021"

[lib]
doctest = true

[dependencies]
tracing = "0.1.37"
thiserror = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", default-features = false, features = ["sync"] }

reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls", "gzip", "stream"], default-features = false }
http = "1.1.0"

[dev-dependencies]
tokio = { version = "1.25.0", features = ["test-util", "macros", "rt-multi-thread"] }
tokio-test = "0.4.2"

